Fixed Book Form Spacing

--- a/src/app/components/roombookform/roombookform.component.sass
+++ b/src/app/components/roombookform/roombookform.component.sass
@@ -6,20 +6,14 @@
   padding-top: 2em
   grid-row-gap: 2em
   position: fixed
-
-
-
-
-.spacer
-  margin-right: -5px
-  padding: 5px
+  width: 24.5vw
+  max-width: 240px
 
 .bk
   width: 25vw
   max-width: 260px
   position: fixed
-  bottom: 10px
-  // right: 0px
+  bottom: 15px
   height: 3em
   background-color: p.$accent
   font-size: 170%
